--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "My Website"
+title: "Santi's queer science corner"
 ---
 
-Hello, Website!
+#Hello, world :)
 
-For more information about simple R Markdown websites, please read the documentation at https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html.
+***To be yourself is truly a revolutionary act, and I think more and more people should try it, because it's gotten me a pretty cool life***
 
-Please also note that simple R Markdown sites are _not_ based on **blogdown**. They are probably good for websites with only a few Rmd documents. For larger-scale and more sophisticated websites (such as blogs), you may want to use **blogdown** instead: https://github.com/rstudio/blogdown.
+![Santi Rivera-Reyes M.Sc Website](C:/Users/DELL/OneDrive/UNH/Fall2023/BIOL 806-Data Science for Life sciences/Biol806/cutefungi.png)
+
