--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Santi's queer science corner"
 ---
 
-#Hello, world :)
+**Santi's queer science corner**
 
 ***To be yourself is truly a revolutionary act, and I think more and more people should try it, because it's gotten me a pretty cool life***
 
